T7/Z7/.gcc.out
/rhome/l/lbuturovic1/workspace/TP/T7/Z7/main.cpp: In function ‘int main()’:
/rhome/l/lbuturovic1/workspace/TP/T7/Z7/main.cpp:52:6: error: passing ‘const std::__cxx11::basic_string<char>’ as ‘this’ argument discards qualifiers [-fpermissive]
   *p=s;
      ^
In file included from /usr/include/c++/7/string:52:0,
                 from /usr/include/c++/7/bits/locale_classes.h:40,
                 from /usr/include/c++/7/bits/ios_base.h:41,
                 from /usr/include/c++/7/ios:42,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/l/lbuturovic1/workspace/TP/T7/Z7/main.cpp:9:
/usr/include/c++/7/bits/basic_string.h:654:7: note:   in call to ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
       operator=(const basic_string& __str)
       ^~~~~~~~
/rhome/l/lbuturovic1/workspace/TP/T7/Z7/main.cpp:59:6: error: passing ‘const std::__cxx11::basic_string<char>’ as ‘this’ argument discards qualifiers [-fpermissive]
   *p=s;
      ^
In file included from /usr/include/c++/7/string:52:0,
                 from /usr/include/c++/7/bits/locale_classes.h:40,
                 from /usr/include/c++/7/bits/ios_base.h:41,
                 from /usr/include/c++/7/ios:42,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/l/lbuturovic1/workspace/TP/T7/Z7/main.cpp:9:
/usr/include/c++/7/bits/basic_string.h:654:7: note:   in call to ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
       operator=(const basic_string& __str)
       ^~~~~~~~
/rhome/l/lbuturovic1/workspace/TP/T7/Z7/main.cpp:64:35: warning: statement has no effect [-Wunused-value]
  "Presjek unesenih stringova je: ";
                                   ^
/rhome/l/lbuturovic1/workspace/TP/T7/Z7/main.cpp:65:2: warning: this ‘for’ clause does not guard... [-Wmisleading-indentation]
  for(auto x: Presjek(s1, s2)) std::cout << x << " "; */
  ^~~
/rhome/l/lbuturovic1/workspace/TP/T7/Z7/main.cpp:65:54: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
  for(auto x: Presjek(s1, s2)) std::cout << x << " "; */
                                                      ^
/rhome/l/lbuturovic1/workspace/TP/T7/Z7/main.cpp:65:55: error: expected primary-expression before ‘/’ token
  for(auto x: Presjek(s1, s2)) std::cout << x << " "; */
                                                       ^
/rhome/l/lbuturovic1/workspace/TP/T7/Z7/main.cpp:67:2: error: expected primary-expression before ‘return’
  return 0;
  ^~~~~~
